--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 </div>
 
 				
-					<div class="section section-skills"><h1 class="section-title">Skills</h1><div class="item">
+					<div class="section section-skills"><h1 class="section-title">Скилы</h1><div class="item">
 		<dl>
 			
 			<dt>Фронтенд</dt>
@@ -183,7 +183,11 @@
     <span class="contact"><i class="fas fa-tty"></i> 89677567671<br><a href="mailto:nik.afansev789@mail.ru" class="no-external-icon"><i class="fas fa-envelope"></i> nik.afansev789@mail.ru</a></span>
 	</div>
 
-			</header><div class="single-column">
+			</header><div class="single-column"><div class="section section-experience"><h1 class="section-title">Опыт</h1>
+
+
+
+</div>
 <div class="section section-projects"><h1 class="section-title">Проекты</h1>
 <div class="item">
 	<h2 class="item-title">
@@ -240,7 +244,7 @@ NPM, познакомился с styleint, prettier, eslint, подключил 
 </div>
 
 </div>
-<div class="section section-awards"><h1 class="section-title">Награды</h1>
+<div class="section section-awards"><h1 class="section-title">Наминации</h1>
 <div class="item">
 	<h2 class="item-title">
 		
@@ -262,7 +266,7 @@ NPM, познакомился с styleint, prettier, eslint, подключил 
 </div>
 
 </div>
-<div class="section section-interests"><h1 class="section-title">Увлечения</h1><div class="item">
+<div class="section section-interests"><h1 class="section-title">Интересы</h1><div class="item">
 	<li>В свободное время занимаюсь спортом, катаюсь на велосипеде и играю в игры.</li>
 	</div></div>
 </div></div>
@@ -272,31 +276,40 @@ NPM, познакомился с styleint, prettier, eslint, подключил 
 	
 	<footer>
 		
-		<span class="footer-item">
-
-			<span class="footer-link">
-				Свяжитесь со мной в
-				<a href="https://t.me/Darknest20" class="no-external-icon">
-					<span>Telegram </span>
-					<i class="fab fa-telegram"></i>
-				</a>
-			</span>
-		
-			<span class="footer-link">
-				Посмотрите мои проекты на
-				<a href="https://github.com/Cerber879" class="no-external-icon">
-					<span>GitHub </span>
-					<i class="fab fa-github"></i>
-				</a>
-			</span>
-		
-		</span>
-		
+<span class="footer-item">
+	
+	<span class="footer-link">
+		Свяжитесь со мной в
+		<a href="https://t.me/Darknest20" class="no-external-icon">
+			<span>Telegram </span>
+			<i class="fab fa-telegram"></i>
+		</a>
+	</span>
+	
+	<span class="footer-link">
+		Посмотрите мои проекты на
+		<a href="https://github.com/Cerber879" class="no-external-icon">
+			<span>GitHub </span>
+			<i class="fab fa-github"></i>
+		</a>
+	</span>
+	
+</span>
 
 
 <span class="footer-item">
 	Вы можете распечатать это резюме в формате А4 или сохранить в формате pdf. | Последнее обновление от 2024-10-31.
 </span>
+
+
+<span class="footer-item" id="credits">
+	<span>The open-source theme Resume-A4 is designed by</span>
+	<a href="https://gitlab.com/mertbakir/resume-A4" class="no-external-icon"><span>Mert&nbsp;Bakır</span>&nbsp;<i class="fab fa-gitlab"></i></a>
+	<br>
+	<span>and template code by</span>
+	<a href="https://gitlab.com/raphendyr/hugo-theme-resume-A4" class="no-external-icon"><span>Jaakko&nbsp;Kantojärvi</span>&nbsp;<i class="fab fa-gitlab"></i></a>
+</span>
+
 
 	</footer>
 	
